Atualização de layout

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Theme Color para Chrome no mobille, Firefox OS, Opera  and iOS Safari -->
-    <meta name="theme-color" content="#ff0" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="#ff0" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#000000" />
 
     <!-- Configuração SEO -->
     <meta name="robots" content="index, follow" />
