--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="container" style="height: auto;">
+    <div class="container">
       <h2><span>Contagem regressiva para o ano novo</span>2024</h2>
       <div class="countdown">
         <div id="day">0</div>
