--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="container">
-      <h2><span>Contagem regressiva para o ano novo</span><span id="nextYear"></span></h2>
+      <h2>Contagem regressiva para o ano novo<span id="nextYear"></span></h2>
       <div class="countdown">
         <div id="day">0</div>
         <div id="hour">0</div>
